<resources>
    <string name="app_name">Notification</string>
<<<<<<< HEAD
    <string name="channel_Medicine">Medicine app</string>
    <string name="Medicine_content">Take your meds bro!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="channel_Medicine">Medicine</string>
    <string name="NotificationTitle">Medicine App</string>
    <string name="Notification">notification</string>
    <string name="NotificationId">notification-id</string>
    <string name="channel_Medicine">Medicine app</string>
    <string name="Medicine_content">Take your meds bro!</string>
    <string name="sign_in_title">Sign In med NemId</string>
    <string name="sign_in_btn_text">Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="i_agree_to_the_terms_of_services_and_privacy_policy">Jeg accepterer Vilkår og betingelser.</string>
    <string name="continueSignInText">Fortsæt</string>
    <string name="Username_label">NemId brugernavn</string>
    <string name="password_label">Kodeord</string>
    <string name="password_hint_text">******</string>
    <string name="username_hint_text">Cpr-Nummer</string>
>>>>>>> Development
</resources>